// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inside-computed-member-expression.ng - {"parenSpacing":true,"trailingComma":"none"} format 1`] = `
====================================options=====================================
parenSpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b)[c]

=====================================output=====================================
( a | b )[ c ]
================================================================================
`;

exports[`inside-member-expression.ng - {"parenSpacing":true,"trailingComma":"none"} format 1`] = `
====================================options=====================================
parenSpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b).c

=====================================output=====================================
( a | b ).c
================================================================================
`;

exports[`inside-optional-expression.ng - {"parenSpacing":true,"trailingComma":"none"} format 1`] = `
====================================options=====================================
parenSpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b)?.c

=====================================output=====================================
( a | b )?.c
================================================================================
`;

exports[`inside-unary.ng - {"parenSpacing":true,"trailingComma":"none"} format 1`] = `
====================================options=====================================
parenSpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
!(a|b)

=====================================output=====================================
! ( a | b )
================================================================================
`;
